# ai-goofish-monitor

./: .coze  .env.example  AI_CONFIG_GUIDE.md  AI_FIX_LOCAL_ENV.bat  DATA_AND_AI_ANALYSIS_GUIDE.md  GEMINI_API_CONFIG.md  GIT_PULL_FIX.md  LOCAL_TROUBLESHOOTING.md  README.md  SINGLE_LINK_ANALYSIS_GUIDE.md  TASK_CREATE_GUIDE.md  VERCEL_DEPLOYMENT.md  WINDOWS_DEPLOYMENT.md  analyze_link.bat  analyze_single.py  config-doubao.bat  config-gemini.bat  config.json  config_doubao.py  configure_ai.py  diagnose_ai.py  install.bat  push_to_github.bat  push_to_github.sh  pyproject.toml  start.bat  test_api.py  test_qwen.py  vercel.json
api/: index.py
src/: scraper.py
src/domain/models/: task.py
src/infrastructure/config/: settings.py
web-ui/src/components/tasks/: TaskForm.vue
web-ui/src/types/: task.d.ts
