[project]
name = "ai-goofish-monitor"
version = "2.0.0"
description = "基于AI的闲鱼商品监控系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "python-socks>=2.0.0",
    "apscheduler>=3.10.0",
    "httpx[socks]>=0.25.0",
    "Pillow>=10.0.0",
    "pyzbar>=0.1.9",
    "qrcode>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.3.0",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]